--- a/moosa.html
+++ b/moosa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Your Perfect Computer</title>
-    <link rel="stylesheet" href="glen.css">
+    <link rel="stylesheet" href="moosa.css">
  <!-- Home Section -->
     <section id="home">
             <!-- Navigation Bar -->
